--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ text-decoration: none;}
     font-weight: bold;
     padding: 14px;
     display: block;
-    background: ##00c4cb;
+    background: #00c4cb;
     text-align: center;
     text-decoration: none;
     border-radius: 4px;
